implemented logout and request email address confirmation pages & various api changes
